--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,9 +1,11 @@
-<h2>{{ myhero.name | uppercase }} Details</h2>
-<div><span>id: </span>{{myhero.id}}</div>
-<div><span>name: </span>{{myhero.name}}</div>
-<div><span>gender: </span>{{myhero.gender}}</div>
-<div>
-    <label>name:
-      <input [(ngModel)]="myhero.name" placeholder="name">
-    </label>
-</div>
+<h2>My Heroes</h2>
+
+<ul class="heroes">
+  <li *ngFor="let hero of heroes"
+    [class.selected]="hero === selectedHero"
+    (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
+
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
